
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int BOOLEAN ;



BOOLEAN isupper(char c)
{
  if(c >= 'A' && c <= 'Z')
    return 1;
  else
    return 0;
}
